# py-package-template

./: cookiecutter.json
.github/workflows/: test.yml
tests/: test_cookiecutter.py
{{ cookiecutter.__package_slug }}/: .pre-commit-config.yaml  Makefile  pyproject.toml
