[build-system]
requires = ["hatchling >= 1.17.0"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.__package_slug }}"
description = "{{ cookiecutter.package_short_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
license = "{{ cookiecutter.open_source_license }}"
authors = ["{{ cookiecutter.author_name }}"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.6",
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/{{ cookiecutter.__package_slug }}/__init__.py"

# [project.urls]
# Homepage = ""
# Documentation = ""
# Repository = ""

[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "pytest",
  "pre_commit",
  "mypy",
  "coverage",
  "pytest-benchmark>=4.0.0"
]
jupyter = [
  "ipykernel",
  "plotly"
]

[project.scripts]
{{ cookiecutter.__package_slug }} = '{{ cookiecutter.__package_slug }}.cli:cli'

# TODO: PYTEST CONFIG

[tool.black]
line-length = 80
target-version = ['py310', 'py311']
# this is an example
force-exclude = '''
/(
    mlflow/protos/
  | mlflow/ml_package_versions\.py$
  | tests/protos/
)
'''

[tool.mypy]
strict = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[tool.coverage.run]
parallel = true
source = [
    "docs/examples",
    "tests",
    "{{ cookiecutter.__package_slug }}"
]
context = '${CONTEXT}'
omit = [
]

[tool.ruff]
line-length = 80
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "T20",  # flake8-print
]
force-exclude = true
ignore = [
]
extend-exclude = [
]

[tool.ruff.per-file-ignores]
# "dev/*" = ["T201"]

{% if cookiecutter.include_github_actions == 'ci+cd' -%}
# esto solo se muestra si hay ci + cd
[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default
{% endif %}